<resources>
    <string name="app_name">e粉紅護照</string>
    <string name="loginImageDescription">rabbitImage</string>
    <string name="account">帳號</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="keepLogin">保持登入</string>
    <string name="forget">忘記密碼</string>
    <string name="laugh">笑吧</string>
    <string name="eat">吃吧</string>
    <string name="cure">治吧</string>
    <string name="move">動吧</string>
    <string name="ask">問吧</string>
    <string name="note">記吧</string>
    <string name="talk">說吧</string>
    <string name="link">連吧</string>
    <string name="flower">flower</string>
    <string name="email">電子信箱</string>
    <string name="pwConfirm">密碼確認</string>
    <string name="eamilHint">帳號需為電子信箱格式</string>
    <string name="pwHint">密碼須為6~12英數字</string>
    <string name="inputEmail">輸入您的帳號(電子信箱)</string>
    <string name="my_record">自我紀錄</string>
    <string name="my">我的</string>
    <string name="treat">治療</string>
    <string name="body">身體</string>
    <string name="food">飲食</string>
    <string name="sport">運動</string>
    <string name="mood">心情</string>
    <string name="activity">活動</string>
    <string name="back">回診</string>
    <string name="setting">設定</string>
    <string name="edit">編輯</string>
    <string name="birth">生日：</string>
    <string name="height">身高：</string>
    <string name="StopBleeding">是否停經：</string>
    <string name="surgery">手術年月：</string>
    <string name="surgeryMethod">術式：</string>
    <string name="cell">細胞類型：</string>
    <string name="horm">荷爾蒙受體：</string>
    <string name="HER">HER-2/neu基因表現：</string>
    <string name="fish">FISH：</string>
    <string name="add">新增</string>
    <string name="date">日期：</string>
    <string name="link_name">單位</string>
    <string name="link_phone">電話</string>
    <string name="link_address">地址</string>
    <string name="north_area">北部</string>
    <string name="central_area">中部</string>
    <string name="south_area">南部</string>
    <string name="east_area">東部及離島</string>
    <string name="hair">假髮</string>
    <string name="dummy_bra">胸衣義乳</string>
    <string name="cuff">袖套</string>
    <string name="home_service">居家服務</string>
    <string name="private_institution">私人機關</string>
    <string name="public_institution">公家機關</string>
    <string name="project">項目</string>
    <string name="qualification">申請資格</string>
    <string name="ask_eat">飲食</string>
    <string name="diagnosis">診斷檢查</string>
    <string name="disease">疾病</string>
    <string name="ask_chem">化療</string>
    <string name="ask_surgery">手術</string>
    <string name="ask_radiation">放射線治療</string>
    <string name="ask_hormone">荷爾蒙</string>
    <string name="ask_target">標靶治療</string>
    <string name="other">其他</string>
    <string name="ask_track">追蹤與預後</string>
    <string name="note_food_hint">選擇初始日期</string>
    <string name="month">月</string>
    <string name="week">週</string>
    <string name="calender">日曆</string>
    <string name="time">時間</string>
    <string name="cal">卡洛里</string>
    <string name="newAdd">新增</string>
    <string name="duration">持續時間</string>
    <string name="day">日</string>
    <string name="privatePolicyText">e粉紅護照隱私權條款
非常歡迎您光臨「e粉紅護照」（以下簡稱本APP），為了讓您能夠安心使用本APP的各項服務與資訊，特此向您說明本APP的隱私權保護政策，以保障您的權益，請您詳閱下列內容：\n
一、隱私權保護政策的適用範圍\n
隱私權保護政策內容，包括本APP如何處理在您使用網站服務時收集到的個人識別資料。隱私權保護政策不適用於本APP以外的相關連結網站，也不適用於非本APP所委託或參與管理的人員。\n
二、個人資料的蒐集、處理及利用方式\n
•	當您造訪本APP或使用本APP所提供之功能服務時，我們將視該服務功能性質，請您提供必要的個人資料，並在該特定目的範圍內處理及利用您的個人資料；非經您書面同意，本APP不會將個人資料用於其他用途。\n
•	本APP在您使用服務信箱、問卷調查等互動性功能時，會保留您所提供的姓名、電子郵件地址、聯絡方式及使用時間等。\n
•	於一般瀏覽時，伺服器會自行記錄相關行徑，包括您使用連線設備的IP位址、使用時間、使用的瀏覽器、瀏覽及點選資料記錄等，做為我們增進網站服務的參考依據，此記錄為內部應用，決不對外公佈。\n
•	為提供精確的服務，我們會將收集的問卷調查內容進行統計與分析，分析結果之統計數據或說明文字呈現，除供內部研究外，我們會視需要公佈統計數據及說明文字，但不涉及特定個人之資料。\n
三、資料之保護\n
•	本APP主機均設有防火牆、防毒系統等相關的各項資訊安全設備及必要的安全防護措施，加以保護網站及您的個人資料採用嚴格的保護措施，只由經過授權的人員才能接觸您的個人資料，相關處理人員皆簽有保密合約，如有違反保密義務者，將會受到相關的法律處分。\n
•	如因業務需要有必要委託其他單位提供服務時，本APP亦會嚴格要求其遵守保密義務，並且採取必要檢查程序以確定其將確實遵守。\n
四、網站對外的相關連結\n
本APP的網頁提供其他網站的網路連結，您也可經由本APP所提供的連結，點選進入其他網站。但該連結網站不適用本APP的隱私權保護政策，您必須參考該連結網站中的隱私權保護政策。\n
五、與第三人共用個人資料之政策\n
本APP絕不會提供、交換、出租或出售任何您的個人資料給其他個人、團體、私人企業或公務機關，但有法律依據或合約義務者，不在此限。\n
前項但書之情形包括不限於：\n
•	經由您書面同意。\n
•	法律明文規定。\n
•	為免除您生命、身體、自由或財產上之危險。\n
•	與公務機關或學術研究機構合作，基於公共利益為統計或學術研究而有必要，且資料經過提供者處理或蒐集著依其揭露方式無從識別特定之當事人。\n
•	當您在網站的行為，違反服務條款或可能損害或妨礙網站與其他使用者權益或導致任何人遭受損害時，經網站管理單位研析揭露您的個人資料是為了辨識、聯絡或採取法律行動所必要者。\n
•	有利於您的權益。\n
•	本APP委託廠商協助蒐集、處理或利用您的個人資料時，將對委外廠商或個人善盡監督管理之責。\n
六、Cookie之使用\n
為了提供您最佳的服務，本APP會在您的電腦中放置並取用我們的Cookie，若您不願接受Cookie的寫入，您可在您使用的瀏覽器功能項中設定隱私權等級為高，即可拒絕Cookie的寫入，但可能會導至網站某些功能無法正常執行 。\n
七、隱私權保護政策之修正\n
本APP隱私權保護政策將因應需求隨時進行修正，修正後的條款將刊登於網站上。\n
    </string>
    <string name="aboutContent">e粉紅護照是由陽明大學護理學系、\n乳癌防治基金會、臺科大資工學系共\n同合作，提供國內乳癌病友罹癌過程\n所需之疾病資訊、運動、復健、飲食\n、心情調適、自我監測、資源連結、\n病友分享等多項功能的智慧自我管理\n行動照護系統。期望乳癌病友透過\n 「e粉紅護照」的使用，達到疾病的\n有效自我管理，進而提升罹癌後生活\n品質。\n若您有使用上的建議，歡迎聯繫我們，\n您的指教是我們進步的動力。 \n敬祝 身體健康、平安喜樂 \n陽明大學護理學系 侯宜菁敬上\n 聯絡信箱：evita@ym.edu.tw\n聯絡電話：28267315、\n0919–138–835</string>
    <string name="about">關於我們</string>
    <string name="privatePolicy">隱私權政策</string>
    <string-array name="spinCell">
        <item>管腔A型</item>
        <item>管腔B型</item>
        <item>三陰性</item>
        <item>HER過度表現型</item>
    </string-array>
    <string-array name="spinYN">
        <item>陽性</item>
        <item>陰性</item>
    </string-array>
    <string-array name="spinHer">
        <item>0</item>
        <item>1+</item>
        <item>2+</item>
        <item>3+</item>
    </string-array>
    <string-array name="spinPm">
        <item>+</item>
        <item>-</item>
    </string-array>

</resources>
