<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/food_day_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/EditTextTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/EditTextMove"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sport"
        android:inputType="text" />
    <EditText
        android:id="@+id/EditTextMoveDuration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duration"
        android:inputType="numberDecimal" />


    <EditText
        android:id="@+id/EditTextMoveCalories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cal"
        android:inputType="numberDecimal" />


</LinearLayout>