<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/EditAllDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/note_food_hint"
                android:inputType="date" />

            <ToggleButton
                android:id="@+id/toggleWeekButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textOff="@string/month"
                android:textOn="@string/week" />
        </LinearLayout>

        <lecho.lib.hellocharts.view.LineChartView
            android:id="@+id/food_graph"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
    </LinearLayout>




</FrameLayout>
