<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/button_shape"
            android:shadowRadius="7"
            android:text="@string/my"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/Btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="12dp"
            android:gravity="center"
            android:onClick="myClick"
            android:shadowRadius="7"
            android:text="@string/edit" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/birth"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtInputBirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85年11月"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:text="@string/height"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtInputHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="165 公分"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtStopBleeding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/StopBleeding"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtInputStopBleeding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="否"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSurgery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/surgery"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtSurgeryDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="106年7月"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtSurgeryMethod"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/surgeryMethod"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtSurgeryMethodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="改良式根除性乳房切除手術、腋窩淋巴清除"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtCell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/cell"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtCellType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="浸潤性腺管癌"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtHorm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/horm"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtHormName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ER 陽性、PR 陽性"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtHER"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/HER"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtHERtype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="陰性"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtFISH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/fish"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtFISHtype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="陰性"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtTreatment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="我的療程計畫："
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtTreatmentName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="化學治療\n放射線治療\n標靶治療\n荷爾蒙治療"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </RelativeLayout>
</LinearLayout>